fix overflow in tiny share on mobile

--- a/app/assets/stylesheets/components/_articles.scss
+++ b/app/assets/stylesheets/components/_articles.scss
@@ -543,10 +543,19 @@ form.edit_post {
     }
 
     .tiny_share {
-      height: 40px;
-      line-height: 40px;
+      @media (min-width: $screen-sm-min) {
+        height: 40px;
+        line-height: 40px;
+      }
 
-      > h6,
+      > h6 {
+        @media (min-width: $screen-sm-min) {
+          height: 40px;
+          line-height: 40px;
+          margin-right: 30px;
+        }
+      }
+
       > a {
         height: 40px;
         line-height: 40px;
